# T2K

nd280AnalysisTools/v1r12/: CMakeLists.txt
nd280AnalysisTools/v1r12/AnalysisTools/: CMakeLists.txt  P0DNuMuUtils.cxx  P0DNuMuUtils.hxx  Stage2GasSelection.cxx  Stage2GasSelection.hxx  TCheatingAnalysisUtils.cxx  TCheatingAnalysisUtils.hxx  TECALActiveBBFromGeom.cxx  TECALActiveBBFromGeom.hxx  TECALEMEnergyCorrection.cxx  TECALEMEnergyCorrection.hxx  TECALPidDefs.cxx  TECALPidDefs.hxx  TECALPidLikelihood.cxx  TECALPidLikelihood.hxx  TECALPidLikelihoodHypothesisTest.cxx  TECALPidLikelihoodHypothesisTest.hxx  TGENIEAnalysisUtils.cxx  TGENIEAnalysisUtils.hxx  TGRooTrackerDefs.h  TGRooTrackerUtils.cxx  TGRooTrackerUtils.hxx  TGlobalAnalysisUtils.cxx  TGlobalAnalysisUtils.hxx  TMVA_ECal_Vertices_Trainer_Likelihood_Shower.class.cxx  TMVA_ECal_Vertices_Trainer_Likelihood_Track.class.cxx  TMatrixWeighting.cxx  TMatrixWeighting.hxx  TMatrixWeighting_LinkDef.h  TMiscAnalysisUtils.cxx  TMiscAnalysisUtils.hxx  TNEUTAnalysisUtils.cxx  TNEUTAnalysisUtils.hxx  TNUANCEAnalysisUtils.cxx  TNUANCEAnalysisUtils.hxx  TPCPOTCalculator.cxx  TPCPOTCalculator.hxx  TSpectrumWeighting.cxx  TSpectrumWeighting.hxx  TSpectrumWeighting_LinkDef.h  (+18 more)
nd280AnalysisTools/v1r12/AnalysisTools/CVS/: Entries  Repository
nd280AnalysisTools/v1r12/AnalysisTools/ecalPidPdfs/: nd280AnalysisTools_likelihood_pdfs.index
nd280AnalysisTools/v1r12/CVS/: Entries  Repository
nd280AnalysisTools/v1r12/Linux-x86_64/: P0DNuMuUtils_cxx.so.d  TCheatingAnalysisUtils_cxx.so.d  TECALEMEnergyCorrection_cxx.so.d  TECALPidDefs_cxx.so.d  TECALPidLikelihoodHypothesisTest_cxx.so.d  TECALPidLikelihood_cxx.so.d  TGENIEAnalysisUtils_cxx.so.d  TGRooTrackerUtils_cxx.so.d  TGlobalAnalysisUtils_cxx.so.d  TMVA_ECal_Vertices_Trainer_Likelihood_Shower.class_cxx.so.d  TMVA_ECal_Vertices_Trainer_Likelihood_Track.class_cxx.so.d  TMatrixWeightingDict.cxx  TMatrixWeightingDict.h  TMatrixWeighting_cxx.so.d  TMiscAnalysisUtils_cxx.so.d  TNEUTAnalysisUtils_cxx.so.d  TNUANCEAnalysisUtils_cxx.so.d  TSpectrumWeightingDict.cxx  TSpectrumWeightingDict.h  TSpectrumWeighting_cxx.so.d  TTrackerAnalysisUtils_cxx.so.d  TTruthUtils_cxx.so.d  TVNeutrinoGeneratorAnalysisUtils_cxx.so.d  constituents.makecmtsave  nd280AnalysisTools.makesav
nd280AnalysisTools/v1r12/app/: CMakeLists.txt  EventDisplay.cxx  PrintECalActiveBBs.cxx  Stage2GasSelection.cxx  TPCPOTCalculator.cxx  nd280AnalysisToolsEventDisplay.cxx
nd280AnalysisTools/v1r12/app/CVS/: Entries  Repository
nd280AnalysisTools/v1r12/cmt/: Excludes.Doxyfile  ImagePath.Doxyfile  buildnd280AnalysisTools.sh  cleanup.csh  cleanup.sh  requirements  setup.csh  setup.sh
nd280AnalysisTools/v1r12/cmt/CVS/: Entries  Repository
nd280AnalysisTools/v1r12/doc/: EventDisplay.dox  compilingAnalysisExecutables.dox  creatingAnalysisTools.dox  mainPage.dox  nd280AnalysisToolsHistory.dox  outsideND280AnalysisTools.dox  settingUpnd280AnalysisTools.dox  troubleshootingND280AnalysisTools.dox  writingAndPerformingAnalyses.dox
nd280AnalysisTools/v1r12/doc/CVS/: Entries  Repository
nd280AnalysisTools/v1r12/fragments/: anatools  anatools_header  doxygen_header
nd280AnalysisTools/v1r12/fragments/CVS/: Entries  Repository
nd280AnalysisTools/v1r12/input/: supplementary_pdg_table.txt
nd280AnalysisTools/v1r12/input/CVS/: Entries  Repository
nd280AnalysisTools/v1r12/macros/: GlobalReconModuleAnalysisScript.C  README  exampleAnalysisScript.C  exampleAnalysisScript.py  userAnalysisBase.py  validate_passthrough.C
nd280AnalysisTools/v1r12/macros/CVS/: Entries  Repository
nd280AnalysisTools/v1r12/macros/deprecatedMacros/: GlobalTemplate.C  Nue_input_files.txt  TestBeamViewer.C  TrackerNuE_Inclusive.C  cc1TrackAnalysis.C  ccAnalysis.C  ccAnalysis_fit.C  ccAnalysis_fit.hh  ccAnalysis_neutrinoData.C  ccAnalysis_neutrinoData.hh  ccAnalysis_tree_process.C  ccAnalysis_tree_process.h  ccChargeCutAnalysis.C  ccFidCutAnalysis.C  ccGlobalAnalysis.C  ccGlobalAnalysis_input_files.txt  ccThpCutAnalysis.C  ccTrackerAnalysis.C  ccqeAnalysis.py  ccqe_input_files.txt  cheatingCcqeAnalysis.py  cheating_ccqe_input_files.txt  computeefficiency.py  doCcqeAnalysis.C  doCheatingCcqeAnalysis.C  doCosmicsMC_DataComparison.C  doNueAnalysis.C  do_ccAnalysis_fit.csh  do_ccAnalysis_fit.sh  ecalSimpleCosmicsAnalysisExample.py  exampleRooTrackScript.C  input-head_Neut.txt  input_MC_files.txt  input_data_files.txt  reconAnalysis.C  run_ccAnalysis_fit.C  trackerReconAnalysis.py  tracker_utilities.C
nd280AnalysisTools/v1r12/macros/numuMacros/: AnalysisBase.C  AnalysisBase.h  DrawingTools.C  DrawingTools.h  ExampleDrawingTools.C  MyAnalysis.C  MyAnalysis.h  NumuFlatTreeDefinition.C  NumuFlatTreeDefinition.h  NumuFlatTreeTools.C  NumuFlatTreeTools.h  NumuFlatTree_GeneralUtils.C  NumuFlatTree_GeneralUtils.h  NumuFlatTree_GlbAna10a.C  NumuFlatTree_GlbAna10a.h  NumuFlatTree_Standard.C  NumuFlatTree_Standard.h  Numu_README  ProcessNumuFlatTree.C  ProcessNumuFlatTree.h  README  SystematicsAnalysis.C  SystematicsAnalysis.h  TrackCategory.h  TreeToolsBase.h  ValidateNumuFlatTree.C  chainTree.C  comp.C  lana.C  oaAnalysisTreeDefinition.C  oaAnalysisTreeDefinition.h  oaAnalysisTreeTools.C  oaAnalysisTreeTools.h  process_chainNumuFlatTree_mc.sh
nd280AnalysisTools/v1r12/macros/officialMacros/: exampleAnalysisScriptWithPOT.C
nd280AnalysisTools/v1r12/macros/trackerECalMacros/: exampleECalPid.py
nd280AnalysisTools/v1r12/macros/trackerPi0Macros/: pi0.py
nd280AnalysisTools/v1r12/scripts/: Doxyfile
nd280AnalysisTools/v1r12/scripts/CVS/: Entries  Repository
nd280AnalysisTools/v1r12/src/: CMakeLists.txt  DumpNDClasses.cxx  compile_anatools
nd280AnalysisTools/v1r12/src/CVS/: Entries  Repository
nd280AnalysisTools/v1r12/src/EventDisplay/: CMakeLists.txt  TControlTab.cxx  TControlTab.hxx  TDisplayedAnalysisModuleBase.cxx  TDisplayedAnalysisModuleBase.hxx  TDisplayedGlobalModule.cxx  TDisplayedGlobalModule.hxx  TDisplayedP0DECALModule.cxx  TDisplayedP0DECALModule.hxx  TDisplayedP0DModule.cxx  TDisplayedP0DModule.hxx  TDisplayedTrackerECalModule.cxx  TDisplayedTrackerModule.cxx  (+30 more)
(+1532 files in other folders)
